<resources>
    <string name="app_name">Datalong_DT550</string>
    <string name="dt_departments">Company name:\ %1$s</string>
    <string name="dt_device_name">Device </string>
    <string name="dt_running_status">running status</string>

    <string name="nitrite_nitrogen">Nitrite Nitrogen</string>
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="total_dissolved_solids">Total Dissolved Solids</string>
    <string name="turbidity">Turbidity</string>
    <string name="shades">Shades</string>
    <string name="residual_chlorine_and_tap_water">Residual Chlorine</string>
    <string name="total_chlorine_and_tap_water">Total Chlorine</string>
    <string name="ammonia_nitrogen">Ammonia Nitrogen</string>

    <string name="lack_of_liquid">Lack of liquid:%1$s</string>
    <string name="lack_of_liquid_yes">yes</string>
    <string name="lack_of_liquid_no">no</string>
    <string name="water_sample_status">Water Sample Status</string>
    <string name="view_more_project">View More Project</string>
    <string name="view_pack_up_project">Close</string>

    <string name="dialog_page_title_max">max value</string>
    <string name="dialog_page_title_mean">mean value</string>
    <string name="dialog_page_title_min">min value</string>

    <!--String select = String.format(getString(R.string.selected) , n);-->
    <string name="concentration_unit">%1$3.2fmg/L</string>
    <string name="temperature_unit">%1$3.2fºC</string>
    <string name="tds_unit">%1$3.2fμS/cm</string>
    <string name="turbidity_unit">%1$3.2fNTU</string>
    <string name="shades_unit">%1$3.2f度</string>
    <string name="measuring_time">measuring time: %1$s</string>

    <string name="load_failed">load failed</string>
    <string name="load_submodule_is_zero">The loaded submodule is 0</string>
    <string name="updateing_data">Updateing Data</string>

    <string name="company_text">company_text</string>
    <string name="version_text">version_text</string>
    <string name="remember_password">Remember your password</string>
    <string name="automatic_login">Automatic login</string>

    <string name="login_button_text">Login</string>

    <string name="loging">loging...</string>
    <string name="loading">loading...</string>

    <string name="administratir">管理员</string>
    <string name="password">111111</string>

    <string name="please_enter_user_name_hint">Please Enter User Name</string>
    <string name="please_enter_password_hint">Please Enter Password</string>

    <string name="login_fail">Password error, please try again.</string>
    <string name="time_from_day_unit"></string>

    <string name="upper_limit">Upper limit</string>
    <string name="lower_limit">Lower limit</string>

    <string name="binding_error">SCAN QR to Binding</string>

    <string name="phone_sim_error">NOT FOUND SIM Card</string>
    <string name="qr_code_data_error">QR Read Fail</string>

    <string name="phone_number">Phone number</string>
    <string name="phone_number_edit_hint">Input Phone Number</string>
    <string name="pls_edit_username_and_pw">Please enter user name and password</string>
    <string name="on_or_off_flash">on/off flash</string>

</resources>
