<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#deedf7"
                android:layout_margin="0.5dp">

    <TextView
        android:id="@+id/measure_item_liquid_state_text"
        style="@style/measure_item_liquid_state_text"
        android:background="@drawable/liquid_state_text_yes_bg"
        android:text="@string/lack_of_liquid"
        />

  <!--  <RelativeLayout
        android:id="@+id/measureu_item_layout"
        style="@style/measureu_item_layout"
        >-->

        <TextView
            android:id="@+id/measure_item_name_text"
            style="@style/measure_item_name_text"
            android:text="@string/nitrite_nitrogen"/>

        <TextView
            android:id="@+id/measure_item_value_text"
            style="@style/measure_item_value_text"
            android:layout_below="@+id/measure_item_name_text"
            android:text="@string/concentration_unit"/>

<!--    </RelativeLayout>-->


    <TextView
        android:id="@+id/measure_item_time_text"
        style="@style/measure_item_time_text"
        android:text="1986-8-7 15:00:00"/>

</RelativeLayout>